# Gemini-AI-Chatbot

./: .env-sample  .env.example  .env.vercel  .gitattributes  .gitignore  .pre-commit-config.yaml  .vercelignore  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  LICENSE  NEXT_SESSION_PLAN.md  README.md  SECURITY.md  alembic.ini  app.py  app_original.py  check_dependencies.py  chrome_extension.crx  clean_credentials.py  clean_trailing_whitespace.py  coverage.xml  debug_server.py  deploy_vercel.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  e2e_test_output.txt  index.py  launch_app.py  launch_readiness_report_20250720_044603.json  launch_readiness_report_20250720_044945.json  launch_readiness_report_20250720_045325.json  launch_readiness_report_20250720_045420.json  list_models.py  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-minimal.txt  (+13 more)
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  github-pages.yml  security_checks.yml
api/: index.py
app/: __init__.py  auth.py  main.py  models.py  security.py
app/api/: __init__.py  admin.py  auth.py  routes.py
app/config/: __init__.py  database.py  extensions.py  settings.py  ssl_config.py  vertex_ai.py  vertex_client.py
app/core/: __init__.py  application.py  cache.py  decorators.py  metrics.py  middleware.py  permissions.py  security.py
app/i18n/: en.json  es.json
app/main/: __init__.py  events.py  routes.py
app/services/: __init__.py  conversation_memory.py  gemini_service.py  multimodal_service.py
app/static/: manifest.json  robots.txt  sitemap.xml  sw.js
app/static/css/: style.css
app/static/js/: chat.js  chrome-ai-complete.js  chrome-ai-manager.js  main.js
app/templates/: admin.html  chat.html  chrome_ai_setup.html  index.html  privacy_policy.html  terms_of_service.html
app/templates/auth/: forgot_password.html  login.html  profile.html  register.html  reset_password.html
app/templates/errors/: 404.html  500.html
app/utils/: __init__.py  helpers.py  i18n.py  translation_utils.py  validators.py
chrome_extension/: CHROME_STORE_BRIEF_UPDATE.md  CHROME_STORE_DESCRIPTION.md  CHROME_STORE_UPDATE_EXPLANATION.md  CHROME_WEBSTORE_SUBMISSION_GUIDE.md  README.md  REVIEWER_NOTES.txt  SCREENSHOTS_GUIDE.md  SETUP_INSTRUCTIONS.md  SUBMISSION_CHECKLIST.md  background.js  content.js  index.html  manifest.json  popup.css  popup.html  popup.js  privacy_policy.html  privacy_policy_en.html  screenshot_instructions.txt  store_description.txt  submission_checklist.txt  welcome.html
config/: database.py  settings.py  ssl_config.py
core/: __init__.py  security_manager.py
deployment/: Dockerfile  README-Docker.md  deploy.sh  docker-compose.yml  gunicorn.conf.py
docker/: nginx.conf
docs/: ANALISIS_TECNICO_COMPLEMENTARIO.md  ANALISIS_Y_MEJORAS_2025.md  API_DOCUMENTATION.md  APP_CERTIFICATION_PLAN.md  APP_STORE_SUBMISSION_GUIDE.md  CHROME_AI_HACKATHON_PLAN.md  CHROME_AI_SETUP.md  CHROME_FLAGS_GUIDE.md  CHROME_STORE_PRIVACY_SETUP.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  CTRL_C_SOLUTION.md  DOCUMENTACION_ACADEMICA_INDEX.md  EVIDENCIA_ACADEMICA_PUBLICACION.md  EXECUTIVE_SUMMARY.md  FINAL_SOLUTION.md  GITHUB_ACTIONS_RESULTS.md  IMMEDIATE_ACTION_PLAN.md  INSTALLATION.md  LAUNCH_STEP_BY_STEP.md  LAUNCH_STRATEGY_IMMEDIATE.md  LICENSE  MANTENIMIENTO_CODIGO.md  PRIVACY_POLICY.md  PROJECT_STRUCTURE.md  PROJECT_SUCCESS_SUMMARY.md  PYTHON_3_13_COMPATIBILIDAD.md  README.md  SYSTEM_DOCUMENTATION.md  USER_GUIDE.md  VERCEL_DEPLOYMENT.md  VERTEX_AI_MIGRATION_STEPS.md  _config.yml  index.md  privacy-policy.html
docs/archive/: CLEANUP_SUMMARY.md  DOCUMENTATION_CLEANUP.md  SCRIPT_COMPARISON.md
docs/archive/analysis/: COMPREHENSIVE_ANALYSIS.md  SYSTEM_ANALYSIS.md
docs/archive/compatibility/: DEPENDENCIAS_MAGIC.md  PYTHON_COMPATIBILITY_GUIDE.md
docs/archive/hackathon/: CHROME_AI_COMPETITIVE_ANALYSIS.md  CHROME_AI_HACKATHON_PLAN.md  CHROME_AI_SETUP_COMPLETE.md  DEMO_VIDEO_SCRIPT.md  HACKATHON_SUBMISSION.md  SUBMISSION_CHECKLIST.md
monitoring/: prometheus.yml
reports/: README.md  coverage.xml  poetry_fix_summary.md  pytest_report.html  test_results.txt
scripts/: README.md  __init__.py  build_chrome_extension.py  check_exposed_credentials.py  check_github_actions.py  clean_project.py  cleanup.py  cleanup_github_environments.py  cleanup_temp_files.py  cleanup_vercel.py  create_chrome_icons.py  create_futuristic_icons.py  create_icons.py  create_placeholder_screenshots.py  create_screenshots.py  daily_maintenance.py  diagnose_app_response.py  diagnose_not_found.py  final_check.py  find_chrome_ai_flags.py  fix_encoding.py  fix_mypy_errors.py  fix_python_compatibility.py  fix_security_events.py  fix_syntax_errors.py  fix_test_imports.py  fix_types.py  format_code.py  generate_screenshots.py  init_db.py  investigate_vercel.py  launch_chrome_ai.bat  launch_readiness_check.py  maintenance.py  migrate_db.ps1  migrate_sqlite_to_postgresql.py  migrate_to_vertex_ai.py  monitor.py  monitor_deployment.py  organize_docs.py  (+21 more)
scripts/backup/: app_original.py
src/: __init__.py  auth.py  models.py  security.py
src/config/: __init__.py  vertex_ai.py  vertex_client.py
static/css/: style.css
static/js/: main.js
templates/: chat.html  index.html
tests/: README.md  __init__.py  conftest.py  manual_api_test.py  test_auth_roles.py  test_basic.py  test_main.py  test_permissions.py  test_routes.py  test_ssl_config.py  test_version.py
tests/e2e/: README.md  __init__.py  dummy_test.js  package-lock.json  package.json  test_e2e.py  test_user_flows.py
tests/integration/: __init__.py  test_api.py  test_integration.py  test_vertex_ai_postgresql.py
tests/unit/: __init__.py  test_admin_api.py  test_app_auth.py  test_app_main.py  test_app_security.py  test_application.py  test_auth.py  test_basic.py  test_cache.py  test_conversation_memory.py  test_gemini_service.py  test_helpers_comprehensive.py  test_i18n.py  test_main_app.py  test_middleware.py  test_multimodal_service.py  test_postgresql.py  test_routes.py  test_security.py  test_security_extended.py  test_utils.py  test_vertex_ai.py
(+4 files in other folders)
